Thu Jan 20 08:02:46 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/coder.rb (represent_object): arbitrary objects
	  may be passed to the Psych::Coder object.

	* ext/psych/lib/psych/visitors/yaml_tree.rb: support for visiting
	  arbitrary objects set on the coder.

	* test/psych/test_coder.rb: supporting test case.

Thu Jan 20 06:03:17 2011  Tanaka Akira  <akr@fsij.org>

	* method.h: parenthesize macro arguments.

Wed Jan 19 13:16:05 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/sources_command.rb: Finish removing code,
	  (fixes sources command test).

Wed Jan 19 13:04:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* proc.c (proc_call): Add gc guard to avoid segfault. The fix
	  is created by Tomoyuki Chikanaga. [Bug #4238][ruby-dev:42963]

Wed Jan 19 12:31:28 2011  Eric Hodel <drbrain@segment7.net>

	* lib/rubygems.rb: Since gem_prelude requires rubygems, enable
	  custom_require always.

Wed Jan 19 12:08:08 2011  Eric Hodel <drbrain@segment7.net>

	* lib/rubygems/commands/dependency_command.rb: Remove require of
	  deleted file.
	* lib/rubygems/commands/fetch_command.rb: ditto
	* lib/rubygems/commands/setup_command.rb: ditto
	* lib/rubygems/commands/sources_command.rb: ditto
	* lib/rubygems/commands/specification_command.rb: ditto

Wed Jan 19 08:13:59 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/rubygems*: Import rubygems 1.5.0 (release candidate)
	* test/rubygems: Ditto

Tue Jan 18 23:31:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y: avoid NULL reference.  [ruby-dev:43067]

Wed Jan 19 02:54:04 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* vsnprintf.c (cvt): set first byte of buf to NUL for the case when
	  no bytes are written to the buf. [ruby-dev:43062]

Tue Jan 18 23:04:51 2011  Tanaka Akira  <akr@fsij.org>

	* gc.h: parenthesize macro arguments.

Tue Jan 18 18:31:14 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/comletion.rb: Irb tab completion support for XX::method forms.
