@@ -39,5 +39,15 @@ module Psych
       assert_match(/"one"/, json)
       assert_match(/"two"/, json)
     end
+
+    def test_time
+      time = Time.new(2010, 10, 10).utc
+      assert_equal "{\"a\": \"2010-10-10 07:00:00.000000000Z\"}\n", Psych.to_json({'a' => time })
+    end
+
+    def test_datetime
+      time = Time.new(2010, 10, 10).to_datetime
+      assert_equal "{\"a\": \"#{time.strftime("%Y-%m-%d %H:%M:%S.%9N %:z")}\"}\n", Psych.to_json({'a' => time })
+    end
   end
 end
